--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,32 @@
 {
+    "functions": [
+        {
+            "source": "functions",
+            "codebase": "default",
+            "ignore": [
+                "venv",
+                ".git",
+                "firebase-debug.log",
+                "firebase-debug.log.*"
+            ]
+        }
+    ],
     "hosting": {
         "source": ".",
         "ignore": [
             "firebase.json",
             "**/.*",
             "**/node_modules/**"
+        ],
+        "rewrites": [
+            {
+                "source": "/api/**",
+                "function": "membership_backend"
+            },
+            {
+                "source": "/bot/**",
+                "function": "membership_backend"
+            }
         ],
         "frameworksBackend": {
             "region": "us-central1"
