--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -8,6 +8,7 @@
         "compile": "hardhat compile",
         "test": "hardhat test",
         "deploy:mumbai": "hardhat run scripts/deploy.js --network mumbai",
+        "deploy:amoy": "hardhat run scripts/deploy.js --network amoy",
         "deploy:polygon": "hardhat run scripts/deploy.js --network polygon",
         "deploy:local": "hardhat run scripts/deploy.js --network hardhat",
         "verify": "hardhat verify --network"
