--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -6,6 +6,6 @@ runConfig:
   memory: "512Mi"
 env:
   - variable: NEXT_PUBLIC_API_URL
-    value: "https://api-1054327025113.us-central1.run.app"
+    value: "https://membership-backend-dhtw77aq7a-uc.a.run.app"
   - variable: STRIPE_PUBLIC_KEY
     value: "your-stripe-public-key"
