--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,7 @@ aiosqlite
 weasyprint==61.2
 Jinja2==3.1.2
 web3==6.15.1
-weasyprint
 aiogram
-sqlalchemy[asyncio]
-aiosqlite
-asyncpg
-pydantic-settings
 httpx
 google-auth
+google-api-python-client
