--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,9 @@
     "**/*.mts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dashboard",
+    "functions",
+    "blockchain"
   ]
 }
