--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,15 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: redis:7-alpine
+    container_name: membership-redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
   api:
     build:
       context: ./api
@@ -53,3 +62,4 @@ services:
 
 volumes:
   postgres_data:
+  redis_data:
