--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "@tanstack/react-query": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
