--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ bcrypt==4.0.1
 aiohttp
 python-dotenv
 aiosqlite
-weasyprint==61.2
+weasyprint==59.0
+pydyf<0.11.0
 Jinja2==3.1.2
 web3==6.15.1
 aiogram
