--- a/dashboard/apphosting.yaml
+++ b/dashboard/apphosting.yaml
@@ -9,3 +9,5 @@ env:
     value: "https://membership-backend-dhtw77aq7a-uc.a.run.app"
   - variable: STRIPE_PUBLIC_KEY
     value: "your-stripe-public-key"
+  - variable: NEXT_PUBLIC_GOOGLE_CLIENT_ID
+    value: "1054327025113-765gvg5r9kjci5kbucurijnp0ih1ap7e.apps.googleusercontent.com"
