feat: Implement affiliate rank depth for commission distribution and add rank editing to the dashboard.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,26 +1,28 @@
 .git
-.github
-.venv
-venv
-__pycache__
+.gitignore
+.env
+.env.*
+venv/
+__pycache__/
 *.pyc
 *.pyo
 *.pyd
 .Python
-*.so
-*.egg
-*.egg-info
-dist
-build
-.env
-.env.local
-node_modules
-dashboard
-docker
-scripts
-functions
-.firebaserc
-firebase.json
-apphosting.yaml
-*.md
-membership.db
+env/
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.pytest_cache/
+.DS_Store
+dashboard/
+functions/
+scripts/
+tests/
+docs/
