--- a/firebase.json
+++ b/firebase.json
@@ -31,6 +31,7 @@
             "ignore": [
                 "firebase.json",
                 "**/.*",
+                "!**/.env.production",
                 "**/node_modules/**"
             ],
             "frameworksBackend": {
